--- a/assets/style.css
+++ b/assets/style.css
@@ -1,27 +1,23 @@
-/*
-.footer{
-    position:absolute;
-    bottom:0px;
-    text-align:center;
-    background-color:#526e2d99;
-    width:100%;
-    height:9%;
-    border-top-color:#69c8ec99;
-    border-top-width:10px;
-    border-top-style:solid;
-    
-
+.footer {
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  background-color: #526e2d99;
+  width: 100%;
+  height: 9%;
+  border-top-color: #69c8ec99;
+  border-top-width: 10px;
+  border-top-style: solid;
 }
-.footer p{
-    color:white;
-    font-size:14px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) }
+.footer p {
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
-*/
 
 h4 {
   color: white;
@@ -68,6 +64,7 @@ hr {
 input {
   width: 100%;
 }
+
 h5 {
   color: #526e2d99;
 }
