--- a/assets/stylePort.css
+++ b/assets/stylePort.css
@@ -1,4 +1,8 @@
 /*NAV */
+body {
+  position: relative;
+  min-height: 100vh;
+}
 
 h4 {
   color: white;
@@ -67,4 +71,25 @@ main {
   background-color: #b7e4f999;
   padding-top: 16px;
   margin: 1.5%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  background-color: #526e2d99;
+  width: 100%;
+  height: 9%;
+  border-top-color: #69c8ec99;
+  border-top-width: 10px;
+  border-top-style: solid;
+}
+.footer p {
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
